# VIPonPicoColor

./: .gitignore  CMakeLists.txt  README.md  README_en.md  data.h  devices.cpp  devices.h  pico_vip.cpp  video_out.pio
doc/: notes.txt
